# django-secrets-fields

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  mypy.yml  publish.yml  test.yml
secrets_fields/: apps.py  checks.py  exceptions.py  fields.py  util.py  widgets.py
secrets_fields/backends/: backends.py  encrypted.py  secretsmanager.py
secrets_fields/management/commands/: create_secret.py  generate_fernet_key.py  migrate_encrypted.py
testapp/: models.py  settings.py  tests.py
testapp/configs/: admin.py  models.py
testapp/configs/migrations/: 0001_initial.py
testapp/tests/: test_backends.py  test_checks.py  test_commands.py  test_field.py  test_util.py
