[tool.poetry]
name = "django-secrets-fields"
version = "0.0.7"
description = "Django encrypted model field that fetches the value from multiple sources"
authors = ["Ryan shaw <ryan.shaw@min.vc>"]
license = "MIT"
readme = "README.md"
packages = [{include = "secrets_fields"}]

[tool.poetry.dependencies]
python = "^3.8"
django = ">3"
boto3 = "^1.28.63"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
