[tool.poetry]
name = "django-secrets-fields"
version = "0.0.9"
description = "Django encrypted model field that fetches the value from multiple sources"
authors = ["Ryan shaw <ryan.shaw@min.vc>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ryan-shaw/django-secrets-fields"
packages = [{include = "secrets_fields"}]

[tool.poetry.dependencies]
python = "^3.8"
django = ">3"
boto3 = "^1.28.63"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
django = "^4.2.6"
moto = "^4.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "tests.settings"

