[project]
name = "django-secrets-fields"
version = "1.0.2"
description = "Django encrypted model field that fetches the value from multiple sources"
authors = [
    { name = "Ryan Shaw", email = "ryan.shaw@min.vc" },
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ryan-shaw/django-secrets-fields"
requires-python = ">=3.10"
dependencies = [
  "django>3",
]
[tool.poetry]
packages = [{include = "secrets_fields"}]

[tool.poe.tasks]
test = "poetry run ./testapp/manage.py test"
build = "pyproject-build"

[project.optional-dependencies]
aws = ["boto3>=1.28.63"]

[tool.poetry.group.dev.dependencies]
django = ">=4"
moto = ">4"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.2"}
mixer = ">6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
modules = "secrets_fields"
exclude = ["testapp"]
python_version = "3.12"
show_error_codes = true
follow_imports = "normal"
ignore_missing_imports = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = ["ignore-without-code"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true
no_implicit_reexport = true
explicit_package_bases = true
disable_error_code = ["import-untyped"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["B904", "DJ006", "DJ008", "DJ012"]
